--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -23,9 +23,8 @@
         <nav-item location="/corporate-ui/styleguide/">Style Guide</nav-item>            
         <nav-item location="/corporate-ui/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
-            <nav-item location="/corporate-ui/developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
-            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">Copy Paste HTML</nav-item>
+            <nav-item location="/corporate-ui/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
+            <nav-item location="/corporate-ui/template/html-copy-paste/html-copy-paste.html" class="active">HTML Copy Paste</nav-item>
           </sub-navigation>  
         </nav-item>
         <nav-item location="/corporate-ui/mobile-apps/">Mobile Apps</nav-item>
