--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -4,6 +4,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
   <meta charset="utf-8">
   <title>UX Library - Copy Paste HTML</title>
+  <script>
+    window['Polymer'] = window['Polymer'] || {};
+    window['Polymer']['dom'] = 'shadow';    
+  </script>
+
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
 </head>
