--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1,7 +1,7 @@
 <dom-module id="c-html-copy-paste">
 
   <template>
-    <link rel="stylesheet" href="https://static.scania.com/build/global/2.3.2/css/corporate-ui.css">
+    @import url("https://static.scania.com/build/global/2.3.2/css/corporate-ui.css");
     <style>
 
         section {
