--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1,7 +1,9 @@
 <dom-module id="c-html-copy-paste">
-
+  <script src="/vendors/frameworks/bootstrap/3.2.0/dist/js/bootstrap.js"></script>
+      @import url("https://static.scania.com/build/global/2.3.2/css/corporate-ui.css");
+      @import url("https://static.scania.com/vendors/frameworks/bootstrap/3.2.0/dist/js/bootstrap.js");     
   <template>
-    @import url("https://static.scania.com/build/global/2.3.2/css/corporate-ui.css");
+
     <style>
 
         section {
