--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -14,7 +14,7 @@
   </script>
   
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script>
+<!--   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js"></script> -->
 </head>
 
 <body class="scania">
