--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1,6 +1,5 @@
 <dom-module id="c-html-copy-paste">
-  <script src="https://static.scania.com/vendors/frameworks/bootstrap/3.2.0/dist/js/bootstrap.js"></script>
-
+  <link rel="import" type="css" href="https://static.scania.com/build/global/2.3.2/css/corporate-ui.css">
   <template>
 
     <style>
