--- a/docs/template/html-copy-paste/html-copy-paste.html
+++ b/docs/template/html-copy-paste/html-copy-paste.html
@@ -16,7 +16,7 @@
 
   <script>
     window['Polymer'] = window['Polymer'] || {};
-    window['Polymer']['dom'] = 'shady';    
+    window['Polymer']['dom'] = 'shadow';    
   </script>
 
 
@@ -24,10 +24,10 @@
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
   <script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js?preload=false"></script>
 
-      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-header/corporate-header.html?dom=shady">
-      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-footer/corporate-footer.html?dom=shady">
-      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Content + Teasers/main-content/main-content.html?dom=shady">
-      <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/main-navigation/main-navigation.html?dom=shady">                  
+  <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-header/corporate-header.html?dom=shady">
+  <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/corporate-footer/corporate-footer.html?dom=shady">
+  <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Content + Teasers/main-content/main-content.html?dom=shady">
+  <link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Navigation/main-navigation/main-navigation.html?dom=shady">  
 
 </head>
 
@@ -35,7 +35,7 @@
 
 
 
-  <c-corporate-header site-name="UX Library" site-url="/ux-library/">
+<!--   <c-corporate-header site-name="UX Library" site-url="/ux-library/">
     <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
@@ -56,27 +56,25 @@
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
             <nav-item location="/corporate-ui/developer/support.html">Support</nav-item>
       </primary-items>
-    </c-main-navigation>
+    </c-main-navigation> -->
 
 
 
       
     <section class="app">
 
-
-
-      <link rel="import" href="https://scania.github.io//corporate-ui/template/html-copy-paste/c-html-copy-paste.html?dom=shadow">
+      <link rel="import" href="https://scania.github.io/corporate-ui/template/html-copy-paste/c-html-copy-paste.html">
 
       <c-html-copy-paste fullbleed></c-html-copy-paste> 
 
 
     </section>
 
-
+<!-- 
   </c-main-content>
   
 
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer></c-corporate-footer> -->
 
 
 
