--- a/docs/template/html-copy-paste/c-html-copy-paste.html
+++ b/docs/template/html-copy-paste/c-html-copy-paste.html
@@ -1,11 +1,5 @@
 <dom-module id="c-html-copy-paste">
 
-  <link rel="import" type="css" href="https://static.scania.com/vendors/frameworks/bootstrap/3.2.0/dist/css/bootstrap-org.css">
-  <link rel="import" type="css" href="https://static.scania.com/resources/fonts/scania-sans/scania-fonts.css">
-  <link rel="import" type="css" href="https://static.scania.com/resources/fonts/font-awesome/font-awesome.css">
-  <link rel="import" type="css" href="https://static.scania.com/resources/icons/scania/icons.css">
-  <link rel="import" type="css" href="https://static.scania.com/build/global/2.3.2/css/core.css">
-
   <template>
 
     <style>
@@ -359,6 +353,9 @@
 
     </style>
 
+    <link rel="stylesheet" type="text/css" href="https://static.scania.com/resources/fonts/scania-sans/scania-tools-fonts.css">
+    <!--  <link rel="stylesheet" href="https://static.scania.com/resources/fonts/scania-sans/cyrillic/scania-cyrillic-fonts.css" type="text/css">  -->   
+
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
@@ -530,10 +527,10 @@
                 <div class="col-md-12">
 <div class="panel panel-default copyable">    
   <div class="panel-body"> 
- 
-<!--     <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
+
+    <c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px">
     </c-highcharts>
-    <link rel="import" href="https://static.scania.com//build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html"> -->
+    <link rel="import" href="https://static.scania.com//build/global/2.3.2/html/component/Data%20Visualization/highcharts/highcharts.html">
   </div>
 </div>
                 </div>                                 
