--- a/docs/template/basic-template-app.html
+++ b/docs/template/basic-template-app.html
@@ -81,11 +81,13 @@
 								<p>A paragraph in a application will be using Scania Sans Semi Condensed for increased readability without beeing to space consuming. These few options togheter forms the base of how the Scania app design is shaped, when using Bootstrap Panels.</p>
 							</div>
 						</div>
+						<div class="panel panel-default"> 
+							<div class="panel-body"> 
+								<c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px"></c-highcharts>
 
-						<c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px"></c-highcharts>
-
-						<link rel="import" href="https://static.scania.com//build/global/2.3.4/html/component/Data%20Visualization/highcharts/highcharts.html">
-
+								<link rel="import" href="https://static.scania.com//build/global/2.3.4/html/component/Data%20Visualization/highcharts/highcharts.html">
+							</div>
+						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="panel panel-default"> 
