--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -1,82 +1,115 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+
+<html lang="en-GB" ng-app="CorporateUI">
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta charset="utf-8">
-	<noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta charset="utf-8">
+  <noscript>
+    <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
+  </noscript>
 
-	<title>Your Template</title>
+   <title>Corporate UI - Developers</title>
+
+  <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js?preload=false"></script>
+
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-
-<!-- 	Using Angular or React, in the index file, you'll need to skip the prealoading when calling Corporate UI with the preload=false parameter -->
-
-	<script src="https://static.scania.com/build/global/2.3.2/js/corporate-ui.js?preload=false"></script>
-	<script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-
-
-<!-- 	Using Angular or React, the components has to be imported AFTER your Angular app is registered -->
-
-<div ng-if="loaded">
-	<link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/navigation/corporate-header/corporate-header.html">
-	<link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/navigation/main-navigation/main-navigation.html">
-	<link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/Content%20+%20Teasers/main-content/main-content.html">
-	<link rel="import" href="https://static.scania.com/build/global/2.3.2/html/component/navigation/corporate-footer/corporate-footer.html">
-</div>	
-
-
-
-
-
-<!-- Set loaded to TRUE inside "construct" or in an init, when you know things are done. -->
-
-
-
 </head>
 
-<body class="scania app">
+<body class="scania" ng-controller="UxLib as uxlib">
 
+  <c-corporate-header site-name="Developers" site-url="/">
+    <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
+  </c-corporate-header>
+    
+  <c-main-content>
+    <c-main-navigation ng-cloak>
+      <primary-items>
+        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="uxlib.changeView($event, item)"></nav-item>
+      </primary-items>
+    </c-main-navigation>
 
-<!-- Use the custom elements where you need them -->
+    <c-main-navigation ng-cloak>
+      <primary-items>
+        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" active="{{item.active}}" ng-click="uxlib.changeView($event, item)">
+          {{item.name}}
+          <sub-navigation ng-if="item.active && item.children" item="item" sub-navigation>
+            <nav-item ng-repeat="subItem in item.children" location="{{item.url}}">{{subItem.name}}</nav-item>
+          </sub-navigation>
+        </nav-item>
+      </primary-items>
+    </c-main-navigation>
 
+    <section class="light">
+      <div class="container">
+        <h2>Angular navigation demo</h2>
+        <p style="color: red"><strong>Notice</strong> that the second integration pattern is not fully working as of now...</p>
+        <p>Here you can find two ways of integrating a navigaton using Angular JS</p>
+        <p>This is just as a demonstration so the sticky solution does not work for both navigations (you are only ment to have one in a real senario)</p>
+      </div>
+    </section>
 
-	<c-corporate-header site-name="My New Application" site-url="/corporate-ui/">
-		<nav-item location="https://www.scania.com">Sample Link</nav-item>
-	</c-corporate-header>
+  </c-main-content>
 
-	<c-main-content>
+  <c-corporate-footer></c-corporate-footer>
 
-		<c-main-navigation>
-			<primary-items>
-				<nav-item location="https://www.scania.com/ux-library">UX Library</nav-item>
-				<nav-item location="#" class="active">Web Applications
-					<sub-navigation caption="Web Applications">
-						<nav-item location="https://static.scania.com/ux-library/developer/">Developer Info</a>
-						</sub-navigation>
-					</nav-item>
-				</primary-items>
-			</c-main-navigation>
+  <script src="https://static.scania.com/vendors/frameworks/angular/1.5.5/angular.min.js"></script>
 
-			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12 public">
-							<h1>Corporate UI for Public Sites</h1>
-							<p>The Public mode mode has a more compact mode than the public setting. This is the default mode for Corporate UI.</p>
-						</div>
-						<div class="col-md-12 app">
-							<h1>Corporate UI for Applications</h1>
-							<p>The App mode has a more compact appearance than the public mode. Just add class="scania app" to the body tag and everyting will be tighter.</p>
-						</div>
-						<div class="col-md-12">
-							<article>
-								<h1>An article is an article</h1>
-								<p>If you contain your content within an <xmp><article></xmp> tag it will get the layout of an regular news article.</p>
-								</div>					
-							</div>  
-						</div>
-					</section>
-				</c-main-content>
-				<c-corporate-footer></c-corporate-footer>
-			</body>
-			</html>
-
+  <script>
+    angular.module('CorporateUI', [])
+      .controller('UxLib', [UxLib])
+      .directive('navItem', navItem)
+      .directive('subNavigation', ['$compile', '$timeout', subNavigation]);
+    function UxLib() {
+      var vm = this;
+      vm.items = [
+        { name: 'home', location: '/', active: true },
+        { name: 'libs', location: '/libs/', children: [
+          { name: 'angular', location: '/libs/angular/' },
+          { name: 'react', location: '/libs/react/' }
+        ] },
+        { name: 'gallery', location: '/gallery/', children: [
+          { name: 'sport', location: '/gallery/sport/' },
+          { name: 'motor', location: '/gallery/motor/' }
+        ] },
+        { name: 'contact', location: '/contact/' }
+      ];
+      vm.changeView = function($event, target) {
+        $event.preventDefault();
+        for(i in vm.items) {
+          var item = vm.items[i];
+          delete item.active;
+        }
+        target.active = true;
+      }
+    }
+    function navItem() {
+      return {
+        restrict: 'A',
+        scope: {
+          item: '=navItem'
+        },
+        template: '{{item.name}} \
+          <sub-navigation caption="{{item.name}}" ng-if="item.children">\
+            <nav-item ng-repeat="subItem in item.children" location="{{subItem.location}}" nav-item="subItem"></nav-item>\
+          </sub-navigation>'
+      }
+    }
+    function subNavigation($compile, $timeout) {
+      return {
+        restrict: 'A',
+        priority: 1000,
+        compile: function compile(tElement, tAttrs, transclude) {
+          // Might be that we can set third param to false (visible attribute in dom)
+          tAttrs.$set('template', tElement.html());
+          // Need to a way to reset and compile template using template attribute when user clicks the navigation
+          iAttrs.$observe('ngIf', function() {
+            console.log('apa')
+          });
+        }
+      }
+    }
+    window.CorporateUi.baseComponents();
+  </script>
+</body>
+</html>
