--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en-GB" ng-app="CorporateUI">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -8,11 +7,11 @@
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
   </noscript>
 
-   <title>Corporate UI - Developers</title>
+  <title>Corporate UI - Angular Basic Template</title>
 
   <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js?preload=false"></script>
-
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
+  
 </head>
 
 <body class="scania" ng-controller="UxLib as uxlib">
@@ -28,7 +27,7 @@
         <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="uxlib.changeView($event, item)"></nav-item>
       </primary-items>
     </c-main-navigation>
-
+<!-- 
     <c-main-navigation ng-cloak>
       <primary-items>
         <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" active="{{item.active}}" ng-click="uxlib.changeView($event, item)">
@@ -39,7 +38,7 @@
         </nav-item>
       </primary-items>
     </c-main-navigation>
-
+ -->
     <section class="light">
       <div class="container">
         <h2>Angular navigation demo</h2>
