--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -11,12 +11,12 @@
 
   <script src="https://static.scania.com/build/global/2.3.4/js/corporate-ui.js?preload=false"></script>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  
+
 </head>
 
-<body class="scania" ng-controller="UxLib as uxlib">
+<body class="scania" ng-controller="ThisSite as thissite">
 
-  <c-corporate-header site-name="Developers" site-url="/">
+  <c-corporate-header site-name="UX Library" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
     <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
   </c-corporate-header>
@@ -24,13 +24,13 @@
   <c-main-content>
     <c-main-navigation ng-cloak>
       <primary-items>
-        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="uxlib.changeView($event, item)"></nav-item>
+        <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" nav-item="item" active="{{item.active}}" ng-click="thissite.changeView($event, item)"></nav-item>
       </primary-items>
     </c-main-navigation>
 <!-- 
     <c-main-navigation ng-cloak>
       <primary-items>
-        <nav-item ng-repeat="item in uxlib.items" location="{{item.url}}" active="{{item.active}}" ng-click="uxlib.changeView($event, item)">
+        <nav-item ng-repeat="item in thissite.items" location="{{item.url}}" active="{{item.active}}" ng-click="thissite.changeView($event, item)">
           {{item.name}}
           <sub-navigation ng-if="item.active && item.children" item="item" sub-navigation>
             <nav-item ng-repeat="subItem in item.children" location="{{item.url}}">{{subItem.name}}</nav-item>
@@ -56,10 +56,10 @@
 
   <script>
     angular.module('CorporateUI', [])
-      .controller('UxLib', [UxLib])
+      .controller('ThisSite', [ThisSite])
       .directive('navItem', navItem)
       .directive('subNavigation', ['$compile', '$timeout', subNavigation]);
-    function UxLib() {
+    function ThisSite() {
       var vm = this;
       vm.items = [
         { name: 'home', location: '/', active: true },
