--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -23,13 +23,27 @@
 
     <c-main-navigation show-search>
         <primary-items>
-            <nav-item location="table-basic-template.html">Standard Tables</nav-item>
-            <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
-            <nav-item location="table-filtered-app.html">Filtered table</nav-item>
-            <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
-            <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
-            <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
-            <nav-item location="table-tree-view.html">Tree View</nav-item>                   
+            <nav-item location="table-basic-template.html" class="active">Tables
+                <sub-navigation caption="Standard Tables">
+                    <nav-item location="table-basic-template.html" class="active">Basic Table</nav-item>
+                    <nav-item location="table-basic-template.html">Bordered</nav-item>
+                </sub-navigation>
+            </nav-item>        
+            <nav-item location="table-match-any-column.htm">Filtered
+                <sub-navigation caption="Filtered Tables">
+                    <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
+                    <nav-item location="table-filtered-app.html">Filtered Columns</nav-item>
+                </sub-navigation>
+            </nav-item>
+            <nav-item location="table-column-selector-widget.html">Responsive
+                <sub-navigation caption="Responsive Tables">
+                    <nav-item location="table-column-selector-widget.html">Columns Selector</nav-item>
+                    <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>
+                <nav-item location="table-filtered-app.html">Filtered Columns</nav-item>
+              </sub-navigation>
+            </nav-item>
+            <nav-item location="table-pagination.html">Paginated</nav-item>               
+            <nav-item location="table-tree-view.html">Apple Tree View</nav-item>                   
         </primary-items>
     </c-main-navigation>
 
