--- a/docs/template/advanced-tables/table-tree-view.html
+++ b/docs/template/advanced-tables/table-tree-view.html
@@ -20,7 +20,7 @@
 
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/hColumns/css/hcolumns.css" type="text/css">
 
-  <link rel="stylesheet" href="/ux-library/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui/ux-lib.css">
 </head>
 <body class="scania" data-env="proto">
 
@@ -33,13 +33,27 @@
 
     <c-main-navigation show-search>
         <primary-items>
-            <nav-item location="table-basic-template.html">Standard Tables</nav-item>
-            <nav-item location="table-pagination.html">Table with Pagination</nav-item>            
-            <nav-item location="table-filtered-app.html">Filtered table</nav-item>
-            <nav-item location="table-column-selector-widget.html">Column Selector</nav-item>
-            <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>            
-            <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
-            <nav-item location="table-tree-view.html">Tree View</nav-item>                   
+            <nav-item location="table-basic-template.html">Tables
+                <sub-navigation caption="Standard Tables">
+                    <nav-item location="table-basic-template.html">Basic Table</nav-item>
+                    <nav-item location="table-basic-template.html">Bordered</nav-item>
+                </sub-navigation>
+            </nav-item>        
+            <nav-item location="table-match-any-column.htm">Filtered
+                <sub-navigation caption="Filtered Tables">
+                    <nav-item location="table-match-any-column.htm">Match Any Column</nav-item>
+                    <nav-item location="table-filtered-app.html">Filtered Columns</nav-item>
+                </sub-navigation>
+            </nav-item>
+            <nav-item location="table-column-selector-widget.html">Responsive
+                <sub-navigation caption="Responsive Tables">
+                    <nav-item location="table-column-selector-widget.html">Columns Selector</nav-item>
+                    <nav-item location="responsive-cards/table-responsive-cards.html">Responsive Cards</nav-item>
+                <nav-item location="table-filtered-app.html">Filtered Columns</nav-item>
+              </sub-navigation>
+            </nav-item>
+            <nav-item location="table-pagination.html">Paginated</nav-item>               
+            <nav-item location="table-tree-view.html" class="active">Apple Tree View</nav-item>                   
         </primary-items>
     </c-main-navigation>
 
@@ -109,7 +123,7 @@
                         }
 
                         if( !(node_id in nodes) ) {
-                            return callback("Node not exists");
+                            return callback("Node don't exists");
                         }
 
                         return callback(null, nodes[node_id]);
