--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -11,7 +11,13 @@ html {opacity:1;}
   font-weight: bold;
 }*/
 
+.ux-lib c-main-content > section {
+    padding: 30px 0;
+}
 
+.ux-lib.app c-main-content > section {
+    padding: 30px 0;
+}
 
 img[alt='Clone me on GitHub'] {
   display: none;
