--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -19,23 +19,28 @@
 
   <link rel="stylesheet" href="css/ux-library.css">
 </head>
-<body class="scania ux-lib" data-env="dev" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" ng-controller="UxLib as uxlib">
 
-  <c-corporate-header site-name="Developers" site-url="/">
-    <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
-    <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
-
+  
   <c-main-content>
-    <c-main-navigation>
+    <c-main-navigation show-search>
       <primary-items>
-        <!-- <nav-item location="/" ng-repeat="section in uxlib.sections.children">{{section.name}}</nav-item> -->
-        <nav-item location="/">Home</nav-item> 
-        <nav-item location="components.html" active="true">Components</nav-item>
-        <nav-item location="examples/">Examples</nav-item>
-        <nav-item location="testing/testing.html">Testing</nav-item>
-        <nav-item location="https://github.com/scania/corporate-ui/issues/new/choose">Report an Issue</nav-item>
-        <nav-item location="https://scania.github.io/corporate-ui-docs/developer/support.html">Support</nav-item>
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+          <sub-navigation caption="Web Applications">
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/component/components.html" class="active">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+          </sub-navigation>
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
 
@@ -75,6 +80,6 @@
     }
   </script>
 
-  <script src="js/ux-library.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/ux-library.js"></script>
 </body>
 </html>
