--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -17,22 +17,29 @@
   </head>
   <body class="scania ux-lib" data-env="dev">
 
-    <c-corporate-header site-name="Developers" site-url="/">
-      <nav-item location="https://scania.com/ux-library">UX Library</nav-item>
-      <nav-item location="https://github.com/scania/corporate-ui">Scania GitHub</nav-item>
-    </c-corporate-header>
-
-    <c-main-content>
-      <c-main-navigation>
-        <primary-items>
-          <nav-item location="/">Home</nav-item> 
-          <nav-item location="components.html" class="active">Components</nav-item>
-          <nav-item location="examples/">Examples</nav-item>
-          <nav-item location="testing/testing.html">Testing</nav-item>
-          <nav-item location="https://github.com/scania/corporate-ui/issues/new/choose">Report an Issue</nav-item>
-          <nav-item location="https://scania.github.io/corporate-ui-docs/developer/support.html">Support</nav-item>
-        </primary-items>
-      </c-main-navigation>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+    <nav-item location="https://www.scania.com/ux-library/">UX Library</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+  </c-corporate-header>
+  
+  <c-main-content>
+    <c-main-navigation>
+      <primary-items>
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+          <sub-navigation caption="Web Applications">
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/component/index.html" class="active">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+          </sub-navigation>
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+      </primary-items>
+    </c-main-navigation>
+    
       <scania-doc></scania-doc>
     </c-main-content>
 
