--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -17,7 +17,7 @@
 
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <link rel="stylesheet" href="css/ux-library.css">
+  <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/css/ux-library.css">
 </head>
 <body class="scania ux-lib" ng-controller="UxLib as uxlib">
 
@@ -27,7 +27,7 @@
   </c-corporate-header>
   
   <c-main-content>
-    <c-main-navigation show-search>
+    <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
@@ -36,7 +36,7 @@
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
-            <nav-item location="/corporate-ui-docs/component/components.html" class="active">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/component/index.html" class="active">Components</nav-item>
             <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
