--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -2,6 +2,14 @@
 
 body.CRStest {background:red !important}
 
+
+@media (max-width: 768px) {
+  h1, .public h1, .app .public h1, .portlet-application h1, article h1 {
+      font-size: 3.6rem;
+  }
+}
+
+
 html {opacity:1;}
 
 /*a, strong, button {
