--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -10,6 +10,21 @@ body.CRStest {background:red !important}
 }
 
 
+
+.container-fluid {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+
+@media (min-width: 1201px) {
+    .container-fluid {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+
+
 html {opacity:1;}
 
 /*a, strong, button {
@@ -216,3 +231,5 @@ p a {font-weight: bold}
 .bentley .footer .footer-copy-text {
   display: none;
 }
+
+
