--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -62,6 +62,7 @@ p a {font-weight: bold}
 @media (max-width: 991px) {
   .ux-lib .ux-sections img {
     width: 40%;
+    margin-top: 0;
   }
 }
 .ux-lib .panel-group a {
