--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -305,13 +305,18 @@
 .bs-docs-section {
   margin-bottom: 60px;
 }
-.bs-docs-section h1[id],
-.bs-docs-section h2[id] {
+.bs-docs-section .page-header h1[id],
+.bs-docs-section .page-header h2[id] {
   margin-top: 0;
   padding-top: 150px;
   padding-bottom: 0;
   margin: 0;
 }
+
+.bs-docs-section .page-header #css-overview {
+  padding-top: 15px;
+}
+
 .bs-callout {
   border-left: 3px solid #eee;
   margin: 20px 0;
