--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -316,6 +316,15 @@
   padding-bottom: 0;
   margin: 0;
 }
+
+@media (max-width: 992px) {
+  .bs-docs-section h1[id].page-header,
+  .bs-docs-section .page-header h1[id],
+  .bs-docs-section .page-header h2[id] {
+    padding-top: 0px;
+  }
+}
+
 .bs-docs-section .page-header #js-overview,
 .bs-docs-section .page-header #components-overview,
 .bs-docs-section .page-header #css-overview {
