--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -1,4 +1,12 @@
 
+/* Temporary classes until next build */
+
+.text-left {text-align:left !important;}
+.text-center {text-align:center !important;}
+.text-right {text-align:right}
+
+/* End temporary classes */
+
 .bs-docs-booticon {
   display: block;
   font-weight: 500;
