--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -13,7 +13,7 @@
     
     <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
     <link rel="import" href="scania-doc/scania-doc.html">
-    <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/css/ux-library.css">
+<!--     <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/css/ux-library.css"> -->
 
   </head>
   <body class="scania ux-lib">
@@ -47,7 +47,7 @@
     <c-corporate-footer></c-corporate-footer>
   
     <script>
-      var html_root = 'https://static.scania.com/build/global/3.1.0/components',
+      var html_root = 'https://static.scania.com/build/global/3.1.0/component',
       component = CorporateUi.getUrlParameter('c'),
       path = [html_root, component, component].join('/') + '.html';
 
